src/App.css
@font-face {
  font-family: 'Consolas';
  src: local('Consolas'), url(fonts/Consolas.ttf) format('truetype');
  /* other formats include: 'woff2', 'truetype, 'opentype',
                            'embedded-opentype', and 'svg' */
}

* {
  font-family: Consolas, serif;
}

body {
  overflow: hidden;
}

.bg-filter {
  width: 110%;
  height: 110%;
  left: -5%;
  top: -5%;
  position: absolute;
  background: url("bg.png");
  background-size: cover;
  z-index: -1;
  filter: blur(5px);
}


.hidden {
  display: none;

  scale: 0;
}

.App {
  text-align: center;
  background-color: #132D45;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}

.default-button {
  text-align: center;
  background-color: lightyellow;
  border: none;
  margin-bottom: 1rem;
  font-family: Consolas, serif;
  font-size: 0.8rem;
  padding: .4rem 1rem .4rem 1rem;
  transition: .25s background-color, .5s transform;
  opacity: 90%;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  75% {
    opacity: 0;
  }
  100% {
    opacity: 100%;
  }
}

.loader-container-full {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

}

.loader {
  width: 45px;
  height: 30px;
  background:
          linear-gradient(#350093 0 0) 0 100%/100% 50%,
          linear-gradient(#350093 0 0) 0 0   /calc(100%/3) 100%;
  background-repeat: no-repeat;
  position: relative;
  clip-path: inset(-100% 0 0 0);
  animation: l2-0 2s infinite steps(4);
}
.loader::before,
.loader::after {
  content: "";
  position: absolute;
  inset:-50% 0 50%;
  background:
          linear-gradient(#00e622 0 0) 0 0      /calc(2*100%/3) 50%,
          linear-gradient(#00e622 0 0) 100% 100%/calc(2*100%/3) 50%;
  background-repeat: no-repeat;
  animation: inherit;
  animation-name: l2-1;
}
.loader::after {
  inset:-100% 0 100%;
  background:
          linear-gradient(#e50021 0 0) 0    0/100%         50%,
          linear-gradient(#e50021 0 0) 100% 0/calc(100%/3) 100%;
  background-repeat: no-repeat;
  animation-name: l2-2;
}
@keyframes l2-0{
  0%       {transform: translateY(-250%);clip-path: inset(100% 0 0 0)}
  25%,100% {transform: translateY(0);clip-path: inset(-100% 0 0 0)}
}
@keyframes l2-1{
  0% ,25%  {transform: translateY(-250%)}
  50%,100% {transform: translateY(0)}
}
@keyframes l2-2{
  0% ,50%  {transform: translateY(-250%)}
  75%,100% {transform: translateY(0)}
}



@keyframes gradient {
  0% {
    background-position: 0 0;
  }
  50% {
    background-position: 100% 100%;
  }
  100% {
    background-position: 0 0;
  }
}


.wave {
  background: rgb(255 255 255 / 5%);
  border-radius: 100%;
  position: fixed;
  width: 50%;
  height: 35em;
  animation: wave 20s -3s ease-in-out infinite;
  left: 0;
  top: 30%;
  opacity: 0.25;
  z-index: -1;
}

.base-screen {
  display: flex;
  height: 100dvh;
  width: 100dvw;
  justify-content: center;
  align-items: center;

  @media screen and (max-width: 600px) {

  }
}

.bg {
  position: absolute;
  z-index: -1;
  scale: 1.2;
  margin: 0 auto;

  @media screen and (max-height: 700px) {
    scale: 1.5;
    transform: translateY(0%);
  }

  @media screen and (max-height: 600px) {
    scale:2;
    transform: translateY(5%);
  }
}

.bg-mobile {
  position: fixed;
  z-index: -1;
  scale: 1.2;
  max-width: 100dvw;
}

.wave:nth-of-type(2) {
  top: 40%;
  animation: wave 28s ease-in-out reverse infinite;
  opacity: 0.5;
}

.wave:nth-of-type(3) {
  top: 50%;
  animation: wave 30s -1s reverse infinite;
  opacity: 0.5;
}

@keyframes wave {
  0% {
    transform: translate(50%, -50%) rotate(0deg);
    background-color: #9d5a5a;
    scale: 100%;
  }

  25% {
    transform: translate(calc(50% - 15%), -50%) rotate(5deg);
    background-color: #5ea95e;
    scale: 70%;
  }

  50% {
    transform: translate(calc(50%), -50%)rotate(0deg);
    background-color: #4b4b9f;
    scale: 100%;
  }

  75% {
    transform: translate(calc(50% + 15%), -50%)rotate(-5deg);
    background-color:  #5ea95e;
    scale: 70%;
  }

  100% {
    transform: translate(50%, -50%)rotate(0deg);
    background-color:  #9d5a5a;
    scale: 100%;
  }
}

